add local log in strategy, and set of keys for dev and prod env
